# learning_Python

./: .gitignore  Pipfile  README.md  requirements.txt
.circleci/: config.yml
.github/: Repository_copilot-instructions.md  copilot-instructions.md
Interrupted_Time_Series_Design/: .gitignore  ITAS_mock.py  README.md  gitignore  hello.py  pyproject.toml  synthetic_its_model.pkl  test_placebo_cv.py  test_prophet_tuning.py  test_sarimax_tuning.py
Interrupted_Time_Series_Design/models/: cigar_its_model.pkl  its_model.pkl
Interrupted_Time_Series_Design/src/: ITAS_mock.py  ITAS_mock_v2.ipynb  example_usage.py  examples.ipynb  generate_report.py  run.py  tutorial.ipynb
Interrupted_Time_Series_Design/src/module/: __init__.py  generate_report.py  its_analysis.py
Interrupted_Time_Series_Design/test/: test_import_generate_report.py  test_its_analysis.py
RSF_trial/: Pipfile  rsf_trial.py  sksurv_optional.py
collatz/: collatz.py  hello.py  pyproject.toml
econometric_analysis/: README.md  demo.py  main.py  pyproject.toml
econometric_analysis/doc/: BUG_FIX_REPORT.md  COMPLETION_REPORT.md  IMPLEMENTATION.md  QUICKSTART.md
econometric_analysis/notebook/: walkthrough.ipynb
econometric_analysis/src/: advanced_examples.py  example_usage.py  regression.py
econometric_analysis/test/: test_doublog_fix.py  test_gam_fix.py  test_regression.py  verify.py  verify_extended.py
greykite_trial/: Pipfile
lgtm/: core.py
lgtm_tool/: main.py
lightweight_mmm_try/: .gitignore  Pipfile
ortool_trial/: Pipfile  ortool_tutorial.py  ouj_721.py  ouj_721_pulp.py  ouj_report_program.py  pyproject.toml  solve_lp.py
ouj_computer_vision/: .gitignore  Pipfile  README.md  pyproject.toml
ouj_computer_vision/03_src/: cv_ex04_copywrite.py
ouj_computer_vision/src/ouj_computer_vision/: __init__.py  cv_ex04_copywrite.py
ouj_opt_with_python/: Pipfile
polars_trial/: Pipfile  polar_try.py  pyproject.toml  tmp.html  tmp.md
prophet_trial/: Pipfile
sklearn_logistic/: Pipfile  (+1 more)
(+16 files in other folders)
