[project]
name = "ouj-computer-vision"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "8-u8", email = "24557402+8-u8@users.noreply.github.com" }
]
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ouj_computer_vision"]
